# slugaudit-mcp

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  audit_db.py  brief.py  claude-code-install.sh  config.toml.example  core.py  db.py  grok-install.sh  instructions.md  mcp_server.py  pyproject.toml  requirements.txt  schema.sql  setup.sh  slugaudit_mcp.py
app/: __init__.py  activation.py  config.py  handlers.py  instructions.py  manifest.py  pool.py  server.py  state.py  sync.py  tools.py
briefing/: __init__.py  assembler.py  formatter.py  providers.py
domain/: __init__.py  import_.py  project.py  result.py
infrastructure/: __init__.py  db.py  filesystem.py  validators.py
languages/: __init__.py  base.py  c.py  cpp.py  go.py  java.py  python.py  ruby.py  rust.py  typescript.py
repositories/: __init__.py  architecture_repo.py  base.py  file_repo.py  finding_repo.py  import_repo.py  project_repo.py  risk_repo.py
services/: __init__.py  briefing_service.py  import_service.py  schema_service.py
tests/: __init__.py  test_activation.py  test_config.py  test_extractors.py  test_handlers.py  test_import_reconciliation.py  test_pool.py  test_reconciliation_repositories.py  test_repositories.py  test_runtime_contract.py  test_state.py  test_sync_contract.py  test_tools.py
